--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -59,7 +59,11 @@
 
 
 @media screen and (max-width: 890px) {
+    html {
+        overflow-x: hidden;
+    }
     .app-header {
+        max-width: 100vw;
         padding: 33px 70px 16px 70px;
         display: inline-block;
     }
